appId: ${APP_ID}
---
- launchApp
- assertVisible: "Flutter Demo Home Page"
- assertVisible: "カウンター: 0"
- tapOn: 
    id: "FloatingActionButton"
- assertVisible: "カウンター: 1"
- tapOn: 
    id: "FloatingActionButton"
- assertVisible: "カウンター: 2"